Neu in dieser Version
- Die immer lacht
- Die Nacht von Freitag auf Montag
- Hulapalu
- Wahnsinn
- Fliegerlied