@@ -1,0 +1,6 @@
+{
+  "name": "Ein Heller und ein Batzen",
+  "language": "DE",
+  "lyrics": "Ein Heller und ein Batzen, die waren beide mein - ja, mein.\nDer Heller ward zu Wasser, der Batzen ward zu Wein - ja, Wein.\nDer Heller ward zu Wasser, der Batzen ward zu Wein!\n\nHei--di, heido, heida, hei--di, heido, heida, heidi, heido, heidahahahahahahaha.\nHei--di, heido, heida, hei--di, heido, heida, heidi, heido, heida.\n\nDie Wirtsleut\' und die Madel, die rufen beid\': \"O weh!\" - \"O weh!\"\nDie Wirtsleut\' wenn ich komme, die Madel wenn ich geh\' - ich geh\'.\nDie Wirtsleut\' wenn ich komme, die Madel wenn ich geh\'!\n\nHei--di, heido, heida, hei--di, heido, heida, heidi, heido, heidahahahahahahaha.\nHei--di, heido, heida, hei--di, heido, heida, heidi, heido, heida.\n\nWar das \'ne große Freude, als ihn der Herrgott schuf - ja schuf?\nEin Kerl wie Samt und Seide, nur Schade, daß er suff - ja suff.\nEin Kerl wie Samt und Seide, nur Schade, daß er suff!",
+  "chords": "C, G7, F"
+}
